feat: add defaultdict hint

--- a/pa3.ipynb
+++ b/pa3.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Data\n",
     "\n",
-    "You will be using your IR system to find relevant documents among a collection of sixty books sourced from Project Gutenberg. The training data is located in the data/ directory under the subdirectory ProjectGutenberg/. Within this directory you will see yet another directory raw/. This contains the raw text files of the sixty short stories. The data/ directory also contains the files dev_queries.txt and dev_solutions.txt. We have provided these to you as a set of development queries and their expected answers to use as you begin implementing your IR system."
+    "You will be using your IR system to find relevant documents among a collection of sixty books sourced from Project Gutenberg. The training data is located in the `data/` directory under the subdirectory `ProjectGutenberg/`. Within this directory you will see yet another directory `raw/`. This contains the raw text files of the sixty books. The `data/` directory also contains the files `dev_queries.txt` and `dev_solutions.txt`. We have provided these to you as a set of development queries and their expected answers to use as you begin implementing your IR system."
    ]
   },
   {
@@ -91,11 +91,11 @@
     "If so, please exit this notebook, kill the notebook server with CTRL-C, and\n",
     "try running\n",
     "\n",
-    "$ conda activate cs124\n",
+    "$ `conda activate cs124`\n",
     "\n",
     "then restarting your notebook server with\n",
     "\n",
-    "$ jupyter notebook\n",
+    "$ `jupyter notebook`\n",
     "\n",
     "If that doesn't work, you should go back and follow the installation\n",
     "instructions in PA0."
@@ -121,6 +121,8 @@
     "import re\n",
     "import sys\n",
     "import math\n",
+    "from collections import defaultdict\n",
+    "from collections import Counter\n",
     "\n",
     "from porter_stemmer import PorterStemmer"
    ]
@@ -260,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will first build the inverted positional index (data structure that keeps track of the documents in which a particular word is contained, and the positions of that word in the document). The documents will have already been read in at this point. The following instance variables in the class are included in the starter code for you to use to build your inverted positional index: titles (a list of strings), docs (a list of lists of strings), and vocab (a list of strings)."
+    "You will first build the inverted positional index (data structure that keeps track of the documents in which a particular word is contained, and the positions of that word in the document). The documents will have already been read in at this point. The following instance variables in the class are included in the starter code for you to use to build your inverted positional index: `self.titles` (a list of strings), `self.docs` (a list of lists of strings), and `self.vocab` (a list of strings)."
    ]
   },
   {
@@ -286,7 +288,9 @@
     "        #         * self.docs = List of documents\n",
     "        #         * self.titles = List of titles\n",
     "\n",
-    "        inv_index = {}\n",
+    "        # Note: To avoid having to initialize inv_index manually, we import\n",
+    "        # defaultdict from collections.\n",
+    "        inv_index = defaultdict(lambda: defaultdict(list))\n",
     "\n",
     "        # Generate inverted index here\n",
     "        for i in range(len(self.docs)):\n",
@@ -308,9 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we will implement get_word_positions. This method returns a list of integers that identifies the positions in the document doc in which the word is found.  This is basically just an API into your inverted index, but you must implement it in order for the index to be evaluated fully. \n",
+    "Next we will implement `get_word_positions`. This method returns a list of integers that identifies the positions in the document doc in which the word is found.  This is basically just an API into your inverted index, but you must implement it in order for the index to be evaluated fully. \n",
     "\n",
-    "**Be careful when accessing your inverted index!** Trying to index into a dictionary using a key that is not present will cause an error (and may cause your submission to crash the autograder)."
+    "**Be careful when accessing your inverted index!** Trying to index into a dictionary using a key that is not present will cause an error (and may cause your submission to crash the autograder). Thus, we suggest using defaultdict and the .get() method to safely handle missing keys."
    ]
   },
   {
@@ -337,9 +341,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will add another method, get_posting, that returns a list of integers (document IDs) that identifies the documents in which the word is found. This is basically another API into your inverted index, but you must implement it in order to be evaluated fully.\n",
+    "We will add another method, `get_posting`, that returns a list of integers (document IDs) that identifies the documents in which the word is found. This is basically another API into your inverted index, but you must implement it in order to be evaluated fully.\n",
     "\n",
-    "Keep in mind that the document IDs in each postings list to be sorted in order to perform the linear merge for boolean retrieval."
+    "Keep in mind that the document IDs in each postings list need to be sorted in order to perform the linear merge for boolean retrieval."
    ]
   },
   {
@@ -409,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's continue to phase query retrieval. Our phrase_retrieve method will return a list of document IDs corresponding to the documents in which all the actual query phrase occurs."
+    "Let's continue to phrase query retrieval. Our `phrase_retrieve` method will return a list of document IDs corresponding to the documents in which all the actual query phrase occurs."
    ]
   },
   {
@@ -447,9 +451,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we will compute and score the td-idf values. compute_tfidf and stores the tf-idf values for words and documents. For this you will probably want to be aware of the class variable vocab, which holds the list of all unique words, as well as the inverted index you created earlier.\n",
+    "Now we will compute and score the tf-idf values. `compute_tfidf` computes and stores the tf-idf values for words and documents. For this you will probably want to be aware of the class variable `self.vocab`, which holds the list of all unique words, as well as the inverted index you created earlier.\n",
     "\n",
-    "You must also implement `get_tfidf` to return the tf-idf weight for a particular word and document ID. Make sure you correctly handle the case where the word isn't present your vocabulary! "
+    "You must also implement `get_tfidf` to return the tf-idf weight for a particular word and document ID. Make sure you correctly handle the case where the word isn't present in your vocabulary! "
    ]
   },
   {
@@ -464,8 +468,13 @@
     "        # TODO: Compute and store TF-IDF values for words and documents in self.tfidf.\n",
     "        #       Recall that you can make use of:\n",
     "        #         * self.vocab: a list of all distinct (stemmed) words\n",
-    "        #         * self.docs: a list of lists, where the i-th document is\n",
-    "        #                   self.docs[i] => ['word1', 'word2', ..., 'wordN']\n",
+    "        #         * self.docs: a dictionary mapping document ID to a \n",
+    "        #                       the set of words that appear in the doc\n",
+    "        #         * self.get_word_positions(word, doc): returns list of \n",
+    "        #                       positions (i.e. all occurrences) of the given\n",
+    "        #                       word within the given document \n",
+    "        #         * self.get_posting(word): returns the list of document IDs\n",
+    "        #                       for docs containing the given word\n",
     "        #       NOTE that you probably do *not* want to store a value for every\n",
     "        #       word-document pair, but rather just for those pairs where a\n",
     "        #       word actually occurs in the document.\n",
@@ -477,7 +486,7 @@
     "\n",
     "    def get_tfidf(self, word, document):\n",
     "        # ------------------------------------------------------------------\n",
-    "        # TODO: Return the tf-idf weigthing for the given word (string) and\n",
+    "        # TODO: Return the tf-idf weighting for the given word (string) and\n",
     "        #       document index.\n",
     "        tfidf = 0.0\n",
     "        # ------------------------------------------------------------------\n",
@@ -497,9 +506,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, we will implement rank_retrieve. This function returns a priority queue of the top ranked documents for a given query. Right now it ranks documents according to their Jaccard similarity with the query, but you will replace this method of ranking with a ranking using the <b>cosine similarity</b> between the documents and query.\n",
+    "Lastly, we will implement `rank_retrieve`. This function returns a priority queue of the top ranked documents for a given query. Right now it ranks documents according to their Jaccard similarity with the query, but you will replace this method of ranking with a ranking using the <b>cosine similarity</b> between the documents and query.\n",
     "    \n",
-    "Remember to use ltc.lnn weighting, that is, ltc weighting for the document and lnn weighting for the query! This means that the query vector weights will be $1 + \\log_{10} \\text{tf}_{t, q}$ with no IDF term or normalization, but we normalize the document vector weights by the length of the document vector (square root of the sum of squares of the tf-idf weights). Finally, the cosine scores are the dot product of the query vector and the document vectors. Refer to this [handout](http://web.stanford.edu/class/cs124/lec/CS124_IR_Handout.pdf) or lecture slides for a more detailed explanation.\n",
+    "Remember to use *ltc.lnn* weighting, that is, ltc weighting for the document and lnn weighting for the query! This means that the query vector weights will be $1 + \\log_{10} \\text{tf}_{t, q}$ with no IDF term or normalization, but we normalize the document vector weights by the length of the document vector (square root of the sum of squares of the tf-idf weights). Finally, the cosine scores are the dot product of the query vector and the document vectors. Refer to this [handout](http://web.stanford.edu/class/cs124/lec/CS124_IR_Handout.pdf) or lecture slides for a more detailed explanation.\n",
     "    \n",
     "When we say normalize by \"document length\" or \"length of document\", we mean the length of the document vector, NOT the number of words in the actual text document. So, when you’re computing cosine similarity between the query and document, the document vector is the tf.idf document weights for all terms in the vocabulary. The document length would be the L2 norm of the document vector."
    ]
@@ -524,6 +533,7 @@
     "        # Right now, this code is a placeholder that simply gets the score by\n",
     "        # taking the Jaccard similarity between the query and every document. \n",
     "        # Please replace with your implementation of cosine similarity-based retrieval.\n",
+    "        # HINT: you can make use of Counter from collections\n",
     "        words_in_query = set()\n",
     "        for word in query:\n",
     "            words_in_query.add(word)\n",
@@ -605,7 +615,7 @@
     "## Running the code\n",
     "You can use the `run_tests` and `run_query` functions to test your code. `run_tests` tests how different components your search engine code perform on a small set of queries and checks whether or not it matches up with our solution's results. `run_query` can be used to test your code on individual queries. \n",
     "\n",
-    "Note that the first run for either of these functions might take a little while, since it will stem all the words in every document create a directory named stemmed/ in ../data/ProjectGutenberg/. This is meant to be a simple cache for the stemmed versions of the text documents. Later runs will be much faster after the first run since all the stemming will already be completed. However, this means that **if something happens during this first run and it does not get through processing all the documents, you may be left with an incomplete set of documents in ../data/ProjectGutenberg/stemmed/. If this happens, simply remove the stemmed/ directory and re-run!**"
+    "Note that the first run for either of these functions might take a little while, since it will stem all the words in every document and create a directory named `stemmed/` in `../data/ProjectGutenberg/`. This is meant to be a simple cache for the stemmed versions of the text documents. Later runs will be much faster after the first run since all the stemming will already be completed. However, this means that **if something happens during this first run and it does not get through processing all the documents, you may be left with an incomplete set of documents in `../data/ProjectGutenberg/stemmed/`. If this happens, simply remove the `stemmed/` directory and re-run!**"
    ]
   },
   {
@@ -764,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For reference, you can run the cell below to see the titles of all the documents in our dataset. As sanity checks, you can try tailoring your queries in run_query to output certain titles and/or checking what IR system outputs against the list of titles to see if the results make sense (i.e. the book _Great Pianists on Piano Playing_ should probably be among the top results if the query is \"pianists play piano\")."
+    "For reference, you can run the cell below to see the titles of all the documents in our dataset. As sanity checks, you can try tailoring your queries in `run_query` to output certain titles and/or checking what IR system outputs against the list of titles to see if the results make sense (i.e. the book _Great Pianists on Piano Playing_ should probably be among the top results if the query is \"pianists play piano\")."
    ]
   },
   {
@@ -824,7 +834,7 @@
     "\n",
     "if [[ ! -f \"./pa3.ipynb\" ]]\n",
     "then\n",
-    "    echo \"WARNING: Did not find notebook in Jupyter working directory. This probably means you're running on Google Colab. You'll need to go to File->Download .ipynb to download your notebok and other files, then zip them locally. See the README for more information.\"\n",
+    "    echo \"WARNING: Did not find notebook in Jupyter working directory. This probably means you're running on Google Colab. You'll need to go to File->Download .ipynb to download your notebook and other files, then zip them locally. See the README for more information.\"\n",
     "else\n",
     "    echo \"Found notebook file, creating submission zip...\"\n",
     "    zip -r submission.zip pa3.ipynb deps/\n",
@@ -846,7 +856,7 @@
     " include that folder in your submission zip file.\n",
     " * Make sure you didn't accidentally change the name of your notebook file,\n",
     " (it should be `pa3.ipynb`) as that is required for the autograder to work.\n",
-    "* Go to Gradescope (gradescope.com), find the PA4 IR assignment and\n",
+    "* Go to Gradescope (gradescope.com), find the PA3 IR assignment and\n",
     "upload your zip file (`submission.zip`) as your solution.\n",
     "* Wait for the autograder to run (it should only take a minute or so) and check\n",
     "that your submission was graded successfully! If the autograder fails, or you\n",
@@ -856,9 +866,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlu",
+   "display_name": "cs124",
    "language": "python",
-   "name": "nlu"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -870,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
