--- a/pa3.ipynb
+++ b/pa3.ipynb
@@ -32,12 +32,12 @@
     "\n",
     "<b>Boolean Retrieval:</b> Implement a Boolean retrieval system, in which you return the list of documents that contain all words in a query. (Yes, you only need to support conjunctions for this assignment.)\n",
     "\n",
-    "<b>Phrase Query Retrieval:</b> Implement a system that returns the list of documents in which the full phrase appears, (ie. the words of the query appear next to each other, in the specified order). Note that at the time of retrieval, you will not have access to the original documents anymore (the documents would be turned into bag of words), so you'll have to utilize your inverted positional index to complete this part.\n",
-    "\n",
     "<b>TF-IDF:</b> Compute and store the term-frequency inverse-document-frequency value for every word-document co-occurrence:\n",
     "\n",
     "<b>Cosine Similarity:</b> Implement cosine similarity in order to improve upon the ranked retrieval system, which currently retrieves documents based upon the Jaccard coefficient between the query and each document. Also note that when computing $w_{t, q}$ (i.e. the weight for the word 𝑤 in the query) do not include the idf term. That is, $w_{t, q} = 1 + \\log_{10} \\text{tf}_{t, q}$.\n",
-    "<b> The reference solution uses ltc.lnn weighting for computing cosine scores. </b>"
+    "<b> The reference solution uses ltc.lnn weighting for computing cosine scores. </b>\n",
+    "\n",
+    "<b>Dense Retrieval:</b> Use pre-computed BERT embeddings to implement dense retrieval. You will implement cosine similarity for dense vectors and a function to retrieve the top-k most similar documents given a query embedding."
    ]
   },
   {
@@ -55,7 +55,7 @@
     "- pumpkin pies\n",
     "- i completed fizzbuzz\n",
     "\n",
-    "We test your system based on the five parts mentioned above: the inverted index (used both to get word positions and to get postings), boolean retrieval, phrase query retrieval, computing the correct tf-idf values, and implementing cosine similarity using the tf-idf values. The provided development queries contain some common words, some uncommon words, and the occasional non-existent word. Some of the query phrases are found verbatim in the book dataset, and some are not. Your system should be able to correctly handle all of these cases.  "
+    "We test your system based on the five parts mentioned above: the inverted index (used both to get word positions and to get postings), boolean retrieval, computing the correct tf-idf values, implementing cosine similarity using the tf-idf values, and dense retrieval. The provided development queries contain some common words, some uncommon words, and the occasional non-existent word. Some of the query phrases are found verbatim in the book dataset, and some are not. Your system should be able to correctly handle all of these cases."
    ]
   },
   {
@@ -121,6 +121,7 @@
     "import re\n",
     "import sys\n",
     "import math\n",
+    "import numpy as np\n",
     "from collections import defaultdict\n",
     "from collections import Counter\n",
     "\n",
@@ -413,44 +414,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's continue to phrase query retrieval. Our `phrase_retrieve` method will return a list of document IDs corresponding to the documents in which all the actual query phrase occurs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class IRSystem(IRSystem):\n",
-    "    def phrase_retrieve(self, query):\n",
-    "        \"\"\"\n",
-    "        Given a query in the form of an ordered list of *stemmed* words, this \n",
-    "        returns the list of documents in which *all* of those words occur, and \n",
-    "        in the specified order. \n",
-    "        Return an empty list if the query does not return any documents. \n",
-    "        \"\"\"\n",
-    "        # ------------------------------------------------------------------\n",
-    "        # TODO: Implement Phrase Query retrieval (ie. return the documents \n",
-    "        #       that don't just contain the words, but contain them in the \n",
-    "        #       correct order) You will want to use the inverted index \n",
-    "        #       that you created in index(), and may also consider using\n",
-    "        #       boolean_retrieve. \n",
-    "        #       NOTE that you no longer have access to the original documents\n",
-    "        #       in self.docs because it is now a map from doc IDs to set\n",
-    "        #       of unique words in the original document.\n",
-    "        # Right now this just returns all possible documents!\n",
-    "        docs = []\n",
-    "\n",
-    "        # ------------------------------------------------------------------\n",
-    "\n",
-    "        return sorted(docs)  # sorted doesn't actually matter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we will compute and score the tf-idf values. `compute_tfidf` computes and stores the tf-idf values for words and documents. For this you will probably want to be aware of the class variable `self.vocab`, which holds the list of all unique words, as well as the inverted index you created earlier.\n",
     "\n",
     "You must also implement `get_tfidf` to return the tf-idf weight for a particular word and document ID. Make sure you correctly handle the case where the word isn't present in your vocabulary! "
@@ -558,6 +521,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Modern information retrieval systems often use **dense retrieval** — representing documents and queries as dense vectors (embeddings) from neural language models like BERT, rather than sparse TF-IDF vectors.\n",
+    "\n",
+    "We have pre-computed BERT embeddings for all 60 books and the development queries. These embeddings capture semantic meaning, so documents about similar topics will have similar embeddings even if they don't share exact words.\n",
+    "\n",
+    "Your task:\n",
+    "1. Implement `cosine_similarity_dense` to compute cosine similarity between two dense vectors\n",
+    "2. Implement `dense_retrieve` to return the top-k documents most similar to a query embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Load pre-computed BERT embeddings\n",
+    "# doc_embeddings: shape (60, 384) - one embedding per book\n",
+    "# query_embeddings: shape (num_queries, 384) - one embedding per dev query\n",
+    "# query_texts: list of query strings corresponding to query_embeddings\n",
+    "\n",
+    "doc_embeddings = np.load('./data/embeddings/doc_embeddings.npy')\n",
+    "query_embeddings = np.load('./data/embeddings/query_embeddings.npy')\n",
+    "with open('./data/embeddings/query_texts.txt', 'r') as f:\n",
+    "    query_texts = [line.strip() for line in f.readlines()]\n",
+    "\n",
+    "print(f\"Loaded {doc_embeddings.shape[0]} document embeddings of dimension {doc_embeddings.shape[1]}\")\n",
+    "print(f\"Loaded {query_embeddings.shape[0]} query embeddings\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosine_similarity_dense(vec1, vec2):\n",
+    "    \"\"\"\n",
+    "    Compute the cosine similarity between two dense vectors.\n",
+    "    \n",
+    "    Args:\n",
+    "        vec1: numpy array of shape (d,)\n",
+    "        vec2: numpy array of shape (d,)\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: cosine similarity between vec1 and vec2\n",
+    "    \"\"\"\n",
+    "    # ------------------------------------------------------------------\n",
+    "    # TODO: Implement cosine similarity for dense vectors.\n",
+    "    #       Hint: This should be ~1-2 lines of code using numpy operations.\n",
+    "    #       Remember: cosine_similarity = (a · b) / (||a|| * ||b||)\n",
+    "    \n",
+    "    return 0.0\n",
+    "    # ------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "def dense_retrieve(query_embedding, doc_embeddings, titles, k=10):\n",
+    "    \"\"\"\n",
+    "    Given a query embedding and document embeddings, return the top-k \n",
+    "    most similar documents.\n",
+    "    \n",
+    "    Args:\n",
+    "        query_embedding: numpy array of shape (d,) - the query vector\n",
+    "        doc_embeddings: numpy array of shape (n, d) - all document vectors\n",
+    "        titles: list of document titles (length n)\n",
+    "        k: number of top documents to return\n",
+    "    \n",
+    "    Returns:\n",
+    "        list of tuples: [(doc_id, title, score), ...] for top-k documents,\n",
+    "                        sorted by similarity score (highest first)\n",
+    "    \"\"\"\n",
+    "    # ------------------------------------------------------------------\n",
+    "    # TODO: Implement dense retrieval.\n",
+    "    #       1. Compute cosine similarity between query and all documents\n",
+    "    #       2. Find the top-k documents by similarity\n",
+    "    #       3. Return list of (doc_id, title, score) tuples\n",
+    "    #       Hint: Consider using np.argsort() and remember to sort descending!\n",
+    "    \n",
+    "    results = []\n",
+    "    \n",
+    "    return results\n",
+    "    # ------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's also add a few methods that given a string, will process and then return the list of matching documents for the different methods you have implemented. You do not need to add any additional code here."
    ]
   },
@@ -591,14 +643,6 @@
     "        query = self.process_query(query_str)\n",
     "        return self.boolean_retrieve(query)\n",
     "\n",
-    "    def phrase_query_retrieve(self, query_str):\n",
-    "        \"\"\"\n",
-    "        Given a string, process and then return the list of matching documents\n",
-    "        found by phrase_retrieve().\n",
-    "        \"\"\"\n",
-    "        query = self.process_query(query_str)\n",
-    "        return self.phrase_retrieve(query)\n",
-    "\n",
     "    def query_rank(self, query_str):\n",
     "        \"\"\"\n",
     "        Given a string, process and then return the list of the top matching\n",
@@ -606,6 +650,60 @@
     "        \"\"\"\n",
     "        query = self.process_query(query_str)\n",
     "        return self.rank_retrieve(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "irsys = IRSystem()\n",
+    "irsys.read_data('./data/ProjectGutenberg')\n",
+    "irsys.index()\n",
+    "irsys.compute_tfidf()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's compare your TF-IDF cosine similarity results with dense retrieval results on the same queries. This will help you see how the two approaches differ in what they consider \"similar\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_retrieval_methods(irsys, query_texts, query_embeddings, doc_embeddings, k=5):\n",
+    "    \"\"\"\n",
+    "    Compare TF-IDF and dense retrieval results for a set of queries.\n",
+    "    \"\"\"\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"COMPARING TF-IDF vs DENSE RETRIEVAL\")\n",
+    "    print(\"=\" * 80)\n",
+    "    \n",
+    "    for i, query in enumerate(query_texts):\n",
+    "        print(f\"\\nQuery: '{query}'\")\n",
+    "        print(\"-\" * 40)\n",
+    "        \n",
+    "        # TF-IDF results\n",
+    "        tfidf_results = irsys.query_rank(query)[:k]\n",
+    "        print(f\"\\nTF-IDF Top-{k}:\")\n",
+    "        for rank, (doc_id, score) in enumerate(tfidf_results, 1):\n",
+    "            print(f\"  {rank}. {irsys.titles[doc_id]} (score: {score:.4f})\")\n",
+    "        \n",
+    "        # Dense retrieval results\n",
+    "        dense_results = dense_retrieve(query_embeddings[i], doc_embeddings, irsys.titles, k=k)\n",
+    "        print(f\"\\nDense Retrieval Top-{k}:\")\n",
+    "        for rank, (doc_id, title, score) in enumerate(dense_results, 1):\n",
+    "            print(f\"  {rank}. {title} (score: {score:.4f})\")\n",
+    "        print(\"=\" * 80)\n",
+    "\n",
+    "# Run the comparison (make sure you've run the cells above first!)\n",
+    "compare_retrieval_methods(irsys, query_texts, query_embeddings, doc_embeddings)"
    ]
   },
   {
@@ -673,16 +771,7 @@
     "                if set(guess) == set(soln[i]):\n",
     "                    num_correct += 1\n",
     "\n",
-    "        elif part == 3:  # phrase query test\n",
-    "            print(\"Phrase Query Retrieval\")\n",
-    "            queries = prob.split(\", \")\n",
-    "            for i, query in enumerate(queries):\n",
-    "                num_total += 1\n",
-    "                guess = irsys.phrase_query_retrieve(query)\n",
-    "                if set(guess) == set(soln[i]):\n",
-    "                    num_correct += 1\n",
-    "\n",
-    "        elif part == 4:  # tfidf test\n",
+    "        elif part == 3:  # tfidf test\n",
     "            print(\"TF-IDF Test\")\n",
     "            queries = prob.split(\"; \")\n",
     "            queries = [xx.split(\", \") for xx in queries]\n",
@@ -694,7 +783,7 @@
     "                        guess <= float(soln[i]) + epsilon:\n",
     "                    num_correct += 1\n",
     "\n",
-    "        elif part == 5:  # cosine similarity test\n",
+    "        elif part == 4:  # cosine similarity test\n",
     "            print(\"Cosine Similarity Test\")\n",
     "            queries = prob.split(\", \")\n",
     "            for i, query in enumerate(queries):\n",
@@ -705,6 +794,19 @@
     "                    if top_rank[1] >= float(soln[i][1]) - epsilon and \\\n",
     "                            top_rank[1] <= float(soln[i][1]) + epsilon:\n",
     "                        num_correct += 1\n",
+    "\n",
+    "        elif part == 5:  # dense retrieval test\n",
+    "            print(\"Dense Retrieval Test\")\n",
+    "            queries = prob.split(\", \")\n",
+    "            for i, query in enumerate(queries):\n",
+    "                num_total += 1\n",
+    "                results = dense_retrieve(query_embeddings[i], doc_embeddings, irsys.titles, k=1)\n",
+    "                if len(results) > 0:\n",
+    "                    top_result = results[0]  # (doc_id, title, score)\n",
+    "                    if top_result[0] == soln[i][0]:\n",
+    "                        if top_result[2] >= float(soln[i][1]) - epsilon and \\\n",
+    "                                top_result[2] <= float(soln[i][1]) + epsilon:\n",
+    "                            num_correct += 1\n",
     "\n",
     "        feedback = \"%d/%d Correct. Accuracy: %f\" % \\\n",
     "                   (num_correct, num_total, float(num_correct) / num_total)\n",
@@ -741,11 +843,6 @@
    "outputs": [],
    "source": [
     "## Run this cell to run the tests\n",
-    "irsys = IRSystem()\n",
-    "irsys.read_data('./data/ProjectGutenberg')\n",
-    "irsys.index()\n",
-    "irsys.compute_tfidf()\n",
-    "\n",
     "run_tests(irsys)"
    ]
   },
