Wording tweaks and rename sanity checks

--- a/pa3.ipynb
+++ b/pa3.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "# Programming Assignment 3: Information Retrieval (Winter 2026)\n",
@@ -28,11 +31,11 @@
     "\n",
     "Improve upon the given IR system by implementing the following features:\n",
     "\n",
-    "<b>Inverted Index:</b> Implement an inverted index - a mapping from words to the documents in which they occur and the count of how many times each word appears in each document.\n",
+    "<b>Inverted Index:</b> Implement an inverted index, which maps words to the documents in which they occur and their count in each document.\n",
     "\n",
     "<b>TF-IDF:</b> Compute and store the term-frequency inverse-document-frequency value for every word-document co-occurrence.\n",
     "\n",
-    "<b>Cosine Similarity:</b> Implement cosine similarity in order to improve upon the ranked retrieval system, which currently retrieves documents based upon the Jaccard coefficient between the query and each document. Note that when computing $w_{t, q}$ (i.e. the weight for the word 𝑤 in the query) do not include the idf term. That is, $w_{t, q} = 1 + \\log_{10} \\text{tf}_{t, q}$. Normalize by both the query and document vector lengths.\n",
+    "<b>Cosine Similarity:</b> Implement cosine similarity in order to improve upon the ranked retrieval system, which currently retrieves documents based upon the Jaccard coefficient between the query and each document. Note that when computing $w_{t, q}$ (i.e. the weight for the word 𝑤 in the query), <b>do not</b> include the idf term. That is, $w_{t, q} = 1 + \\log_{10} \\text{tf}_{t, q}$. Normalize by both the query and document vector lengths.\n",
     "\n",
     "<b>Dense Retrieval:</b> Use pre-computed BERT embeddings to implement dense retrieval. You will implement cosine similarity for dense vectors and a function to retrieve the top-k most similar documents given a query embedding.\n",
     "\n",
@@ -45,7 +48,7 @@
    "source": [
     "## Evaluation\n",
     "\n",
-    "Your IR system will be evaluated on a small development set of queries as well as a held-out set of queries. The development queries are encoded in the file <b>dev_queries.txt</b> and are:\n",
+    "Your IR system will be evaluated on a small development set of queries as well as a held-out set of queries. The development queries are encoded in the file `dev_queries.txt`. These are:\n",
     "\n",
     "- chest of drawers\n",
     "- machine learning is cool\n",
@@ -268,7 +271,7 @@
     "\n",
     "Our IR system applies the following preprocessing pipeline to all documents and queries:\n",
     "\n",
-    "1. **Lowercase**: Convert all text to lowercase (\"The\" → \"the\")\n",
+    "1. **Lower case**: Convert all text to lower case (\"The\" → \"the\")\n",
     "2. **Tokenization**: Split text into individual words on whitespace\n",
     "3. **Remove non-alphanumeric**: Strip punctuation and special characters\n",
     "4. **Stemming**: Reduce words to their root form using the Porter Stemmer\n",
@@ -276,15 +279,15 @@
     "### Why Stemming?\n",
     "\n",
     "Stemming is crucial for information retrieval. Consider the query \"running shoes\":\n",
-    "- Without stemming: Only matches documents containing exactly \"running\"\n",
+    "- Without stemming: information retrieval can only matches documents containing exactly \"running\"\n",
     "- With stemming: \"running\" → \"run\", which also matches \"runs\", \"ran\", \"runner\"\n",
     "\n",
-    "This dramatically improves **recall** — our ability to find all relevant documents. The Porter Stemmer we use applies rules like:\n",
+    "This dramatically improves **recall**, or our ability to find all relevant documents. The Porter Stemmer we use applies rules like:\n",
     "- \"running\" → \"run\"\n",
     "- \"machines\" → \"machin\"\n",
     "- \"learning\" → \"learn\"\n",
     "\n",
-    "The preprocessing is already implemented in the `IRSystem` class above. When you build your inverted index, you'll be working with already-stemmed tokens."
+    "The preprocessing is already implemented in the `IRSystem` class above. When you build your inverted index, you'll be working with tokens that have already been stemmed."
    ]
   },
   {
@@ -293,11 +296,13 @@
    "source": [
     "### Part 1: Inverted Index\n",
     "\n",
-    "You will build an inverted index — a data structure that maps words to the documents in which they occur and how many times they occur. Unlike a positional index (which stores exact positions), we simply need to track the **term frequency** (count) of each word in each document.\n",
+    "You will build an inverted index — a data structure that maps words to the documents that contain them and how many times they occur. Unlike a positional index (which stores exact positions), we simply need to track the **term frequency** (count) of each word in each document.\n",
     "\n",
-    "**Structure:** `inv_index[word][doc_id] = term_count`\n",
+    "The inverted index should be structured as a nested dictionary like the following:\n",
     "\n",
-    "For example, if \"drawer\" appears 8 times in document 24, then: `inv_index[\"drawer\"][24] = 8`\n",
+    "`{word1: {doc1: 3}, word2: {doc2: 4}}`\n",
+    "\n",
+    "In the inverted index above, word 1 appeared 3 times in document 1, and word 2 appeared 4 times in document 2. You should be able to access the term count of a word in a particular document using this syntax: `inv_index[word][doc_id] = term_count`. For example, if \"drawer\" appears 8 times in document 24, then: `inv_index[\"drawer\"][24] = 8`\n",
     "\n",
     "The documents will have already been read in at this point. The following instance variables are available: `self.titles` (a list of strings), `self.docs` (a list of lists of strings), and `self.vocab` (a list of strings)."
    ]
@@ -349,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sanity Check: `index()`"
+    "### Spot Check: `index()`"
    ]
   },
   {
@@ -358,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Sanity Check: Inverted Index ===\n",
+    "# === Spot Check: Inverted Index ===\n",
     "# Run this cell after implementing index() to verify your implementation\n",
     "\n",
     "# Create a temporary test instance\n",
@@ -383,7 +388,7 @@
     "count = _test_ir.inv_index[\"drawer\"][33]\n",
     "assert count == 9, f\"ERROR: Expected count of 9 for 'drawer' in doc 33, got {count}\"\n",
     "\n",
-    "print(\"All sanity checks passed for index()!\")\n",
+    "print(\"All spot checks passed for index()!\")\n",
     "del _test_ir  # Clean up"
    ]
   },
@@ -431,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Sanity Check: get_posting() ===\n",
+    "# === Spot Check: get_posting() ===\n",
     "# Run this cell after implementing get_posting() to verify your implementation\n",
     "\n",
     "# Create a temporary test instance\n",
@@ -458,7 +463,7 @@
     "posting = _test_ir.get_posting(\"fizzbuzz\")\n",
     "assert posting == [], f\"ERROR: 'fizzbuzz' not in corpus, should return [], got {posting}\"\n",
     "\n",
-    "print(\"All sanity checks passed for get_posting()!\")\n",
+    "print(\"All spot checks passed for get_posting()!\")\n",
     "del _test_ir  # Clean up"
    ]
   },
@@ -470,9 +475,7 @@
     "\n",
     "Now we will compute and store the TF-IDF values. `compute_tfidf` computes and stores the TF-IDF values for words and documents. For this you will probably want to be aware of the class variable `self.vocab`, which holds the list of all unique words, as well as the inverted index you created earlier.\n",
     "\n",
-    "**Output structure:** `self.tfidf[word][doc] = tf_idf_value`\n",
-    "\n",
-    "For example: `self.tfidf[\"drawer\"] = {24: 0.912, 33: 1.021, ...}`\n",
+    "Similar to the inverted index, you will store your TF-IDF values in a nested dictionary structure, where you can access the TF-IDF value of a given word in a document by calling `self.tfidf[word][doc] = tf_idf_value`. For example: `self.tfidf[\"drawer\"] = {24: 0.912, 33: 1.021, ...}`\n",
     "\n",
     "You must also implement `get_tfidf` to return the TF-IDF weight for a particular word and document ID. Make sure you correctly handle the case where the word isn't present in your vocabulary!"
    ]
@@ -533,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sanity Check: TF-IDF"
+    "### Spot Check: TF-IDF"
    ]
   },
   {
@@ -542,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Sanity Check: TF-IDF ===\n",
+    "# === Spot Check: TF-IDF ===\n",
     "# Run this cell after implementing compute_tfidf() and get_tfidf()\n",
     "\n",
     "# Create a temporary test instance\n",
@@ -574,7 +577,7 @@
     "tfidf = _test_ir.get_tfidf(\"drawer\", 0)\n",
     "assert tfidf == 0, f\"ERROR: TF-IDF for word not in document should be 0, got {tfidf}\"\n",
     "\n",
-    "print(\"All sanity checks passed for compute_tfidf() and get_tfidf()!\")\n",
+    "print(\"All spot checks passed for compute_tfidf() and get_tfidf()!\")\n",
     "del _test_ir  # Clean up"
    ]
   },
@@ -640,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sanity Check: `rank_retrieve()`"
+    "### Spot Check: `rank_retrieve()`"
    ]
   },
   {
@@ -649,7 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Sanity Check: rank_retrieve() (Cosine Similarity) ===\n",
+    "# === Spot Check: rank_retrieve() (Cosine Similarity) ===\n",
     "# Run this cell after implementing rank_retrieve() to verify your implementation\n",
     "\n",
     "# Create a temporary test instance\n",
@@ -691,7 +694,7 @@
     "scores = [score for doc, score in results]\n",
     "assert scores == sorted(scores, reverse=True), \"ERROR: Results should be sorted by score descending\"\n",
     "\n",
-    "print(\"All sanity checks passed for rank_retrieve()!\")\n",
+    "print(\"All spot checks passed for rank_retrieve()!\")\n",
     "del _test_ir  # Clean up"
    ]
   },
@@ -791,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sanity Check: Dense Retrieval"
+    "### Spot Check: Dense Retrieval"
    ]
   },
   {
@@ -800,7 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Sanity Check: Dense Retrieval ===\n",
+    "# === Spot Check: Dense Retrieval ===\n",
     "# Run this cell after implementing cosine_similarity_dense() and dense_retrieve()\n",
     "\n",
     "# Create a temporary test instance\n",
@@ -844,7 +847,7 @@
     "assert isinstance(results[0][1], str), \"ERROR: Second element of tuple should be str (title)\"\n",
     "assert isinstance(results[0][2], (float, np.floating)), \"ERROR: Third element of tuple should be float (score)\"\n",
     "\n",
-    "print(\"All sanity checks passed for dense retrieval!\")\n",
+    "print(\"All spot checks passed for dense retrieval!\")\n",
     "del _test_ir  # Clean up"
    ]
   },
@@ -1119,7 +1122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For reference, you can run the cell below to see the titles of all the documents in our dataset. As sanity checks, you can try tailoring your queries in `run_query` to output certain titles and/or checking what IR system outputs against the list of titles to see if the results make sense (i.e. the book _Great Pianists on Piano Playing_ should probably be among the top results if the query is \"pianists play piano\")."
+    "For reference, you can run the cell below to see the titles of all the documents in our dataset. As spot checks, you can try tailoring your queries in `run_query` to output certain titles and/or checking what IR system outputs against the list of titles to see if the results make sense (i.e. the book _Great Pianists on Piano Playing_ should probably be among the top results if the query is \"pianists play piano\")."
    ]
   },
   {
