feat: add ethics questions

--- a/pa3.ipynb
+++ b/pa3.ipynb
@@ -57,7 +57,7 @@
     "- pumpkin pies\n",
     "- i completed fizzbuzz\n",
     "\n",
-    "We test your system based on five components: the inverted index (term counts), getting postings lists, computing the correct TF-IDF values, implementing cosine similarity using the TF-IDF values, and dense retrieval. The provided development queries contain some common words, some uncommon words, and the occasional non-existent word. Some of the query phrases are found verbatim in the book dataset, and some are not. Your system should be able to correctly handle all of these cases."
+    "We test your system based on five components: the inverted index (term counts), getting postings lists, computing the correct TF-IDF values, implementing cosine similarity using the TF-IDF values, and dense retrieval. The provided development queries contain words that appear frequently in the corpus (e.g., \"the\"), words that appear infrequently (e.g., \"drawers\"), and words that do not appear in any document (e.g., \"fizzbuzz\"). Some of the query phrases are found verbatim in the book dataset, and some are not. Your system should be able to correctly handle all of these cases."
    ]
   },
   {
@@ -278,7 +278,7 @@
     "\n",
     "### Why Stemming?\n",
     "\n",
-    "Stemming is crucial for information retrieval. Consider the query \"running shoes\":\n",
+    "Stemming is often used as part of information retrieval. Consider the query \"running shoes\":\n",
     "- Without stemming: information retrieval can only matches documents containing exactly \"running\"\n",
     "- With stemming: \"running\" → \"run\", which also matches \"runs\", \"ran\", \"runner\"\n",
     "\n",
@@ -296,7 +296,7 @@
    "source": [
     "### Part 1: Inverted Index\n",
     "\n",
-    "You will build an inverted index — a data structure that maps words to the documents that contain them and how many times they occur. Unlike a positional index (which stores exact positions), we simply need to track the **term frequency** (count) of each word in each document.\n",
+    "You will build an inverted index — a data structure that maps words to the documents that contain them and how many times they occur. We simply need to track the **term frequency** (count) of each word in each document.\n",
     "\n",
     "The inverted index should be structured as a nested dictionary like the following:\n",
     "\n",
@@ -1140,15 +1140,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 8 (Ethics): Information Retrieval Systems and Search Engines\n",
+    "## Part 8: Ethics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identity & Representation\n",
     "\n",
-    "Safiya Umoja Noble's <a href=\"https://nyupress.org/9781479837243/algorithms-of-oppression/\">Algorithms of Oppression</a> (2018) provides insight into how search engines and information retrieval algorithms can exhibit substantial racist and sexist biases. Noble demonstrates how prejudice against black women is embedded into search engine ranked results. These biases are apparent in both Google search's autosuggestions and the first page of Google results. In this assignment, we have explored numerous features that are built into information retrieval systems, like Google Search. \n",
-    "\n",
-    "How could the algorithms you built in this assignment contribute to enforcing real-world biases? \n",
-    "\n",
-    "How can we reduce data discrimination and algorithmic bias that perpetuate gender and racial inequalities in search results and IR system?\n",
-    "\n",
-    "Please provide a short response to each of these questions (1-2 paragraphs per question)."
+    "Safiya Umoja Noble's <a href=\"https://nyupress.org/9781479837243/algorithms-of-oppression/\">Algorithms of Oppression</a> (2018) argues that search engines are not neutral portals of information; rather, they can reinforce racist and sexist biases through their ranking systems. Noble demonstrates how prejudice against black women is embedded into search engine ranked results. These biases are apparent in both Google search’s autosuggestions and the first page of Google results. For example, for years, image searches for the word \"hacker\" predominantly showed white men in hoodies, while searches for \"CEO\" rarely featured women or people of color. These results are influential in how we construct and perceive our own identities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.) Choose a term that describes an aspect of your identity or a role you embody (e.g., your race, gender, major, extracurriculars, or a specific community). Make a prediction as to what groups or characteristics will be strongly represented in the first page of a Google Search of this term. Then, perform the Google search and look at the first set of results. How do these results compare to your predictions? Are they representative of your lived experiences? Do they reflect the full diversity of people you see in this group in real life? How might this influence people’s conceptions of people who hold this identity? How might this be good or bad? "
    ]
   },
   {
@@ -1159,6 +1167,75 @@
    "source": [
     "class IRSystem(IRSystem):\n",
     "    def algorithmic_bias_in_IR_systems(self):\n",
+    "        # TODO: Place your response into the response string below\n",
+    "        response = \"\"\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.) Some argue that a search engine's outputs should act as a \"mirror\": reflecting the world exactly as it is, meaning it is okay for outputs to be represented proportional to how they exist in the real world. Others think this could be too narrow, reinforcing the world’s existing inequalities, and instead argue for \"aspiration\" as a different form of representation:  deliberately boosting diverse results to provide a more inclusive view. What do you think should be the default from search engine results? Should people be able to manually control these defaults? Make a convincing argument (2-3 sentences) as to why. If you are pair programming you may surface different perspectives from your partner, which is also a fine thing to talk about! Remember to be respectful! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IRSystem(IRSystem):\n",
+    "    def mirror_vs_aspiration(self):\n",
+    "        # TODO: Place your response into the response string below\n",
+    "        response = \"\"\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter Bubbles & Personalized Ranking\n",
+    "\n",
+    "In this assignment, your IR system ranks documents identically for every user. However, commercial search engines use personal data (browsing history, location, interests) to tailor results. While this can increase relevance, it can trap users in a filter bubble, where they only see information that confirms their existing beliefs.\n",
+    "\n",
+    "1.) Compare search results for a localized or debated term (e.g., \"best hair salon,\" \"is coffee healthy,\" or \"impact of [current news event]\") with a peer or by using an incognito window. <br/>\n",
+    "    • What differences do you notice in the top 5 results?  <br/>\n",
+    "    • How might these differences arise from leveraging personal data in the ranking algorithm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IRSystem(IRSystem):\n",
+    "    def filter_bubble_experience(self):\n",
+    "        # TODO: Place your response into the response string below\n",
+    "        response = \"\"\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.) As a developer, how much tailoring is too much? PageRank and TF-IDF are mathematical foundations, but the weights chosen for personalization are ethical, value-laden choices. <br/>\n",
+    "    • What kinds of personal data should be allowed to influence a ranking algorithm for news or social issues?  <br/>\n",
+    "    • Should a system be allowed to make inferences about your own identities? Which ones? Should it have to provide justification for this? <br/>\n",
+    "    • Should an algorithm be required to allow users to \"break out\" of their filter bubble by intentionally inserting dissenting or diverse viewpoints into their top results?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IRSystem(IRSystem):\n",
+    "    def personalization_ethics(self):\n",
     "        # TODO: Place your response into the response string below\n",
     "        response = \"\"\n",
     "        return response"
